Add advanced notebook with imputation, PCA/DBSCAN fusion, tuning, and rich visualizations; enhance existing notebook with advanced cells

--- a/data_quality_anomaly_detection.ipynb
+++ b/data_quality_anomaly_detection.ipynb
@@ -521,6 +521,247 @@
       "metadata": {},
       "outputs": [],
       "source": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# 🔬 Advanced Analysis Addendum / Gelişmiş Analiz Eki / Annexe d'analyse avancée\n",
+        "\n",
+        "- **Scope | Kapsam | Portée**:\n",
+        "  - Ensemble-based anomaly fusion, score distributions, density-based clustering diagnostics\n",
+        "  - Model evaluation with ROC and Precision-Recall curves\n",
+        "  - PCA reconstruction-error analysis and DBSCAN k-distance elbow\n",
+        "  - Feature importance (permutation) and partial dependence\n",
+        "  - Geospatial anomaly mapping\n",
+        "  - Statistical diagnostics: Q-Q, empirical CDF\n",
+        "\n",
+        "- **Languages**:\n",
+        "  - Türkçe: Aşağıdaki hücreler mobilite verileri için ileri seviye anomalilik ve kalite analizlerini içerir.\n",
+        "  - English: The following cells add advanced anomaly and data-quality analyses tailored for mobility.\n",
+        "  - Français: Les cellules ci-dessous ajoutent des analyses avancées d'anomalies et de qualité des données pour la mobilité.\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# === CELL 9A: Score distributions & ensemble fusion details ===\n",
+        "import numpy as np\n",
+        "import pandas as pd\n",
+        "import matplotlib.pyplot as plt\n",
+        "import seaborn as sns\n",
+        "from sklearn.metrics import roc_curve, auc, precision_recall_curve\n",
+        "\n",
+        "# Safety: rebuild needed intermediates if not present\n",
+        "if 'data_clean' not in globals():\n",
+        "    numeric_cols = ['trip_duration_min', 'speed_kmh']\n",
+        "    data_clean = data[numeric_cols].dropna()\n",
+        "if 'ensemble_scores' not in globals():\n",
+        "    from scipy import stats\n",
+        "    from sklearn.ensemble import IsolationForest\n",
+        "    z_scores = np.abs(stats.zscore(data_clean))\n",
+        "    Q1 = data_clean.quantile(0.25)\n",
+        "    Q3 = data_clean.quantile(0.75)\n",
+        "    IQR = Q3 - Q1\n",
+        "    iqr_outliers = ((data_clean < (Q1 - 1.5 * IQR)) | (data_clean > (Q3 + 1.5 * IQR))).any(axis=1)\n",
+        "    iso_forest = IsolationForest(contamination=0.1, random_state=42)\n",
+        "    iso_pred = iso_forest.fit_predict(data_clean)\n",
+        "    ensemble_scores = (z_scores > 3).any(axis=1).astype(int) + iqr_outliers.astype(int) + (iso_pred == -1).astype(int)\n",
+        "\n",
+        "fig, axes = plt.subplots(1, 3, figsize=(18, 4))\n",
+        "# Z-score magnitude distribution\n",
+        "sns.histplot(np.max(np.abs(stats.zscore(data_clean)), axis=1), bins=30, ax=axes[0], color='steelblue')\n",
+        "axes[0].axvline(3, color='red', linestyle='--', label='threshold=3')\n",
+        "axes[0].set_title('Max |Z| distribution')\n",
+        "axes[0].legend()\n",
+        "# IQR whisker distances\n",
+        "for ax_idx, col in enumerate(data_clean.columns):\n",
+        "    q1, q3 = data_clean[col].quantile([0.25, 0.75])\n",
+        "    iqr = q3 - q1\n",
+        "    lower, upper = q1 - 1.5*iqr, q3 + 1.5*iqr\n",
+        "    dist = np.maximum(data_clean[col]-upper, lower-data_clean[col])\n",
+        "    dist = np.clip(dist, a_min=0, a_max=None)\n",
+        "    if ax_idx == 0:\n",
+        "        axes[1-1].set_visible(False)\n",
+        "axes[1].hist(dist, bins=30, color='darkorange')\n",
+        "axes[1].set_title('IQR whisker distance')\n",
+        "# Ensemble score distribution\n",
+        "axes[2].hist(ensemble_scores, bins=[-0.5,0.5,1.5,2.5,3.5], rwidth=0.9, color='purple')\n",
+        "axes[2].set_xticks([0,1,2,3])\n",
+        "axes[2].set_title('Ensemble votes (0-3)')\n",
+        "plt.tight_layout(); plt.show()\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# === CELL 9B: ROC & Precision-Recall curves (Isolation Forest vs RF) ===\n",
+        "from sklearn.metrics import roc_curve, auc, precision_recall_curve, average_precision_score\n",
+        "\n",
+        "# Build labels if missing\n",
+        "if 'y_test' not in globals():\n",
+        "    from sklearn.model_selection import train_test_split\n",
+        "    y = (ensemble_scores >= 2).astype(int)\n",
+        "    X = data_clean\n",
+        "    X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=42)\n",
+        "    # quick models\n",
+        "    from sklearn.ensemble import IsolationForest, RandomForestClassifier\n",
+        "    iso = IsolationForest(random_state=42, contamination=np.mean(y))\n",
+        "    iso.fit(X_train)\n",
+        "    iso_pred = iso.decision_function(X_test)\n",
+        "    rf = RandomForestClassifier(random_state=42)\n",
+        "    rf.fit(X_train, y_train)\n",
+        "    rf_prob = rf.predict_proba(X_test)[:,1]\n",
+        "else:\n",
+        "    # reuse previously fit models if available\n",
+        "    try:\n",
+        "        iso_pred = best_iso.decision_function(X_test)\n",
+        "    except Exception:\n",
+        "        iso = IsolationForest(random_state=42, contamination=np.mean(y_test))\n",
+        "        iso.fit(X_test)\n",
+        "        iso_pred = iso.decision_function(X_test)\n",
+        "    try:\n",
+        "        rf_prob = best_rf.predict_proba(X_test)[:,1]\n",
+        "    except Exception:\n",
+        "        rf = RandomForestClassifier(random_state=42)\n",
+        "        rf.fit(X_test, y_test)\n",
+        "        rf_prob = rf.predict_proba(X_test)[:,1]\n",
+        "\n",
+        "fpr_iso, tpr_iso, _ = roc_curve(y_test, iso_pred)\n",
+        "roc_auc_iso = auc(fpr_iso, tpr_iso)\n",
+        "precision_iso, recall_iso, _ = precision_recall_curve(y_test, iso_pred)\n",
+        "ap_iso = average_precision_score(y_test, iso_pred)\n",
+        "\n",
+        "fpr_rf, tpr_rf, _ = roc_curve(y_test, rf_prob)\n",
+        "roc_auc_rf = auc(fpr_rf, tpr_rf)\n",
+        "precision_rf, recall_rf, _ = precision_recall_curve(y_test, rf_prob)\n",
+        "ap_rf = average_precision_score(y_test, rf_prob)\n",
+        "\n",
+        "fig, axes = plt.subplots(1, 2, figsize=(12, 5))\n",
+        "axes[0].plot(fpr_iso, tpr_iso, label=f'IF ROC AUC={roc_auc_iso:.3f}')\n",
+        "axes[0].plot(fpr_rf, tpr_rf, label=f'RF ROC AUC={roc_auc_rf:.3f}')\n",
+        "axes[0].plot([0,1],[0,1],'k--', alpha=0.5)\n",
+        "axes[0].set_title('ROC Curves'); axes[0].set_xlabel('FPR'); axes[0].set_ylabel('TPR'); axes[0].legend()\n",
+        "axes[1].plot(recall_iso, precision_iso, label=f'IF AP={ap_iso:.3f}')\n",
+        "axes[1].plot(recall_rf, precision_rf, label=f'RF AP={ap_rf:.3f}')\n",
+        "axes[1].set_title('Precision-Recall Curves'); axes[1].set_xlabel('Recall'); axes[1].set_ylabel('Precision'); axes[1].legend()\n",
+        "plt.tight_layout(); plt.show()\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# === CELL 9C: DBSCAN k-distance elbow & PCA reconstruction error plot ===\n",
+        "from sklearn.neighbors import NearestNeighbors\n",
+        "from sklearn.decomposition import PCA\n",
+        "\n",
+        "# k-distance graph for DBSCAN eps heuristic\n",
+        "neighbors = NearestNeighbors(n_neighbors=5)\n",
+        "neighbors_fit = neighbors.fit(data_scaled)\n",
+        "distances, indices = neighbors_fit.kneighbors(data_scaled)\n",
+        "sorted_distances = np.sort(distances[:, -1])\n",
+        "plt.figure(figsize=(6,4))\n",
+        "plt.plot(sorted_distances)\n",
+        "plt.title('DBSCAN k-distance (k=5)'); plt.xlabel('Points sorted'); plt.ylabel('k-distance')\n",
+        "plt.grid(True, alpha=0.3)\n",
+        "plt.show()\n",
+        "\n",
+        "# PCA reconstruction error distribution\n",
+        "pca = PCA(n_components=2)\n",
+        "X_pca = pca.fit_transform(data_scaled)\n",
+        "X_rec = pca.inverse_transform(X_pca)\n",
+        "recon_err = np.mean((data_scaled - X_rec)**2, axis=1)\n",
+        "plt.figure(figsize=(6,4))\n",
+        "sns.histplot(recon_err, bins=30, color='teal')\n",
+        "plt.axvline(np.percentile(recon_err,95), color='red', linestyle='--', label='95th pct')\n",
+        "plt.title('PCA Reconstruction Error'); plt.xlabel('error'); plt.ylabel('count'); plt.legend()\n",
+        "plt.show()\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# === CELL 9D: Permutation importance & partial dependence (RF) ===\n",
+        "from sklearn.inspection import permutation_importance, PartialDependenceDisplay\n",
+        "from sklearn.ensemble import RandomForestClassifier\n",
+        "\n",
+        "if 'best_rf' in globals():\n",
+        "    rf_model = best_rf\n",
+        "else:\n",
+        "    rf_model = RandomForestClassifier(random_state=42).fit(X_train, y_train)\n",
+        "\n",
+        "result = permutation_importance(rf_model, X_test, y_test, n_repeats=20, random_state=42)\n",
+        "pi = pd.Series(result.importances_mean, index=X_test.columns).sort_values(ascending=False)\n",
+        "plt.figure(figsize=(6,4))\n",
+        "pi.plot(kind='bar', color='slateblue'); plt.title('Permutation Importance'); plt.ylabel('Mean Δscore')\n",
+        "plt.tight_layout(); plt.show()\n",
+        "\n",
+        "fig, ax = plt.subplots(1, 2, figsize=(10,4))\n",
+        "PartialDependenceDisplay.from_estimator(rf_model, X_test, [0], ax=ax[0])\n",
+        "ax[0].set_title(f'PDP: {X_test.columns[0]}')\n",
+        "PartialDependenceDisplay.from_estimator(rf_model, X_test, [1], ax=ax[1])\n",
+        "ax[1].set_title(f'PDP: {X_test.columns[1]}')\n",
+        "plt.tight_layout(); plt.show()\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# === CELL 9E: Geospatial anomaly map (2D & 3D) ===\n",
+        "from mpl_toolkits.mplot3d import Axes3D  # noqa: F401\n",
+        "\n",
+        "plt.figure(figsize=(6,5))\n",
+        "plt.scatter(data['longitude'], data['latitude'], c=data['anomaly_isolation'].astype(int), cmap='coolwarm', alpha=0.7)\n",
+        "plt.xlabel('Longitude'); plt.ylabel('Latitude'); plt.title('Geospatial map (Isolation anomalies)')\n",
+        "plt.tight_layout(); plt.show()\n",
+        "\n",
+        "fig = plt.figure(figsize=(7,5))\n",
+        "ax = fig.add_subplot(111, projection='3d')\n",
+        "ax.scatter(data['longitude'], data['latitude'], data['speed_kmh'], c=data['anomaly_isolation'].astype(int), cmap='coolwarm', alpha=0.7)\n",
+        "ax.set_xlabel('Longitude'); ax.set_ylabel('Latitude'); ax.set_zlabel('Speed (km/h)')\n",
+        "ax.set_title('3D: Geo + Speed with anomalies')\n",
+        "plt.tight_layout(); plt.show()\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# === CELL 9F: Statistical diagnostics (Q-Q, empirical CDF) ===\n",
+        "import scipy.stats as ss\n",
+        "\n",
+        "fig, axes = plt.subplots(1, 2, figsize=(12,4))\n",
+        "ss.probplot(data['trip_duration_min'].dropna(), dist=\"norm\", plot=axes[0])\n",
+        "axes[0].set_title('Q-Q: Trip Duration')\n",
+        "ss.probplot(data['speed_kmh'].dropna(), dist=\"norm\", plot=axes[1])\n",
+        "axes[1].set_title('Q-Q: Speed')\n",
+        "plt.tight_layout(); plt.show()\n",
+        "\n",
+        "# Empirical CDFs\n",
+        "for col, color in [('trip_duration_min','navy'), ('speed_kmh','darkred')]:\n",
+        "    vals = np.sort(data[col].dropna().values)\n",
+        "    cdf = np.arange(1, len(vals)+1) / len(vals)\n",
+        "    plt.plot(vals, cdf, label=col, color=color)\n",
+        "plt.title('Empirical CDFs'); plt.xlabel('Value'); plt.ylabel('CDF'); plt.legend(); plt.grid(True, alpha=0.3)\n",
+        "plt.tight_layout(); plt.show()\n"
+      ]
     }
   ],
   "metadata": {
