Docs: inline code comments for cells 1-4 in advanced notebook

--- a/data_quality_anomaly_detection_advanced.ipynb
+++ b/data_quality_anomaly_detection_advanced.ipynb
@@ -17,7 +17,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -30,26 +30,26 @@
       ],
       "source": [
         "# CELL 1: Libraries & setup (TR/EN/FR)\n",
-        "import numpy as np, pandas as pd, matplotlib.pyplot as plt, seaborn as sns\n",
-        "from scipy import stats\n",
-        "from sklearn.preprocessing import StandardScaler, RobustScaler\n",
-        "from sklearn.impute import SimpleImputer\n",
-        "from sklearn.decomposition import PCA\n",
-        "from sklearn.cluster import DBSCAN\n",
-        "from sklearn.ensemble import IsolationForest, RandomForestClassifier\n",
-        "from sklearn.model_selection import train_test_split, GridSearchCV, RandomizedSearchCV, cross_val_score\n",
+        "import numpy as np, pandas as pd, matplotlib.pyplot as plt, seaborn as sns  # core scientific and plotting libs\n",
+        "from scipy import stats  # statistical tests and utilities\n",
+        "from sklearn.preprocessing import StandardScaler, RobustScaler  # feature scaling utilities\n",
+        "from sklearn.impute import SimpleImputer  # handle missing values (median imputation)\n",
+        "from sklearn.decomposition import PCA  # dimensionality reduction / reconstruction error\n",
+        "from sklearn.cluster import DBSCAN  # density-based clustering for outlier detection\n",
+        "from sklearn.ensemble import IsolationForest, RandomForestClassifier  # anomaly isolation & supervised model\n",
+        "from sklearn.model_selection import train_test_split, GridSearchCV, RandomizedSearchCV, cross_val_score  # splitting & tuning\n",
         "from sklearn.metrics import (classification_report, confusion_matrix, roc_auc_score, accuracy_score,\n",
         "                             precision_score, recall_score, f1_score, roc_curve, auc, precision_recall_curve,\n",
-        "                             average_precision_score)\n",
-        "from sklearn.inspection import permutation_importance, PartialDependenceDisplay\n",
-        "import warnings; warnings.filterwarnings('ignore')\n",
-        "np.random.seed(42); plt.style.use('default'); sns.set_palette('husl')\n",
-        "print('Libraries ready / Kütüphaneler hazır / Bibliothèques prêtes')\n"
+        "                             average_precision_score)  # model evaluation metrics\n",
+        "from sklearn.inspection import permutation_importance, PartialDependenceDisplay  # explainability tools\n",
+        "import warnings; warnings.filterwarnings('ignore')  # silence non-critical warnings\n",
+        "np.random.seed(42); plt.style.use('default'); sns.set_palette('husl')  # reproducibility and plotting styles\n",
+        "print('Libraries ready / Kütüphaneler hazır / Bibliothèques prêtes')  # confirmation message\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -85,26 +85,26 @@
       ],
       "source": [
         "# CELL 2: Load data & quality overview (TR/EN/FR)\n",
-        "data = pd.read_csv('anomalies_detected.csv')\n",
-        "print('Shape:', data.shape)\n",
-        "print('Columns:', list(data.columns))\n",
-        "print('Missing values:\\n', data.isnull().sum())\n",
-        "print('\\nDescribe:\\n', data.describe())\n",
+        "data = pd.read_csv('anomalies_detected.csv')  # load dataset produced by cifre.py\n",
+        "print('Shape:', data.shape)  # rows, columns\n",
+        "print('Columns:', list(data.columns))  # column names\n",
+        "print('Missing values:\\n', data.isnull().sum())  # count missing values per column\n",
+        "print('\\nDescribe:\\n', data.describe())  # basic stats for numeric columns\n",
         "\n",
         "# Basic cleaning views\n",
-        "numeric_cols = ['trip_duration_min','speed_kmh']\n",
-        "missing_pct = data.isnull().mean()*100\n",
-        "q_summary = {}\n",
+        "numeric_cols = ['trip_duration_min','speed_kmh']  # numeric features used in models\n",
+        "missing_pct = data.isnull().mean()*100  # missing percentage\n",
+        "q_summary = {}  # store IQR summary\n",
         "for col in numeric_cols:\n",
-        "    q1, q3 = data[col].quantile([0.25,0.75])\n",
-        "    iqr = q3-q1\n",
-        "    q_summary[col] = dict(q1=float(q1), q3=float(q3), iqr=float(iqr))\n",
-        "print('\\nIQR summary:', q_summary)\n"
+        "    q1, q3 = data[col].quantile([0.25,0.75])  # quartiles\n",
+        "    iqr = q3-q1  # interquartile range\n",
+        "    q_summary[col] = dict(q1=float(q1), q3=float(q3), iqr=float(iqr))  # keep plain floats for printing\n",
+        "print('\\nIQR summary:', q_summary)  # show thresholds aiding outlier rules\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -117,34 +117,34 @@
       ],
       "source": [
         "# CELL 3: Impute, standardize & baseline anomaly flags\n",
-        "imputer = SimpleImputer(strategy='median')\n",
-        "data_imp = pd.DataFrame(imputer.fit_transform(data[numeric_cols]), columns=numeric_cols, index=data.index)\n",
-        "scaler = StandardScaler()\n",
-        "data_std = scaler.fit_transform(data_imp.values)\n",
+        "imputer = SimpleImputer(strategy='median')  # robust to outliers\n",
+        "data_imp = pd.DataFrame(imputer.fit_transform(data[numeric_cols]), columns=numeric_cols, index=data.index)  # imputed frame\n",
+        "scaler = StandardScaler()  # zero mean, unit variance\n",
+        "data_std = scaler.fit_transform(data_imp.values)  # scaled array for distance-based methods\n",
         "\n",
         "# Traditional methods\n",
-        "def zscore_flags(df, thr=3.0):\n",
-        "    z = np.abs(stats.zscore(df))\n",
-        "    return (z>thr).any(axis=1)\n",
+        "def zscore_flags(df, thr=3.0):  # flag rows with any feature beyond |Z|>thr\n",
+        "    z = np.abs(stats.zscore(df))  # per-feature z-scores\n",
+        "    return (z>thr).any(axis=1)  # row-level outlier if any feature exceeds threshold\n",
         "\n",
-        "def iqr_flags(df):\n",
+        "def iqr_flags(df):  # Tukey rule: beyond 1.5*IQR whiskers\n",
         "    Q1 = df.quantile(0.25); Q3 = df.quantile(0.75); IQR = Q3-Q1\n",
         "    return ((df < (Q1 - 1.5*IQR)) | (df > (Q3 + 1.5*IQR))).any(axis=1)\n",
         "\n",
-        "z_flags = zscore_flags(data_imp)\n",
-        "iqr_f = iqr_flags(data_imp)\n",
-        "iso = IsolationForest(random_state=42, contamination=0.1)\n",
-        "iso_pred = iso.fit_predict(data_imp)\n",
-        "iso_flags = pd.Series(iso_pred==-1, index=data_imp.index)\n",
+        "z_flags = zscore_flags(data_imp)  # boolean series\n",
+        "iqr_f = iqr_flags(data_imp)  # boolean series\n",
+        "iso = IsolationForest(random_state=42, contamination=0.1)  # proportion of anomalies ~ 10%\n",
+        "iso_pred = iso.fit_predict(data_imp)  # -1 = anomaly, 1 = normal\n",
+        "iso_flags = pd.Series(iso_pred==-1, index=data_imp.index)  # boolean series aligned to index\n",
         "\n",
         "# Ensemble voting (boolean OR + vote sum later)\n",
-        "ensemble_any = z_flags | iqr_f | iso_flags\n",
+        "ensemble_any = z_flags | iqr_f | iso_flags  # any detector marks as anomaly\n",
         "print('Counts -> Z:', z_flags.sum(), 'IQR:', iqr_f.sum(), 'IF:', iso_flags.sum(), 'Any:', ensemble_any.sum())\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -157,18 +157,18 @@
       ],
       "source": [
         "# CELL 4: DBSCAN & PCA anomaly scoring\n",
-        "pca = PCA(n_components=2).fit(data_std)\n",
-        "X_pca = pca.transform(data_std)\n",
-        "X_rec = pca.inverse_transform(X_pca)\n",
-        "recon_err = np.mean((data_std - X_rec)**2, axis=1)\n",
-        "re_thr = np.percentile(recon_err, 95)\n",
-        "pca_flags = recon_err > re_thr\n",
+        "pca = PCA(n_components=2).fit(data_std)  # 2D latent embedding\n",
+        "X_pca = pca.transform(data_std)  # project to components\n",
+        "X_rec = pca.inverse_transform(X_pca)  # reconstruct back to input space\n",
+        "recon_err = np.mean((data_std - X_rec)**2, axis=1)  # per-sample reconstruction error\n",
+        "re_thr = np.percentile(recon_err, 95)  # high-error threshold (top 5%)\n",
+        "pca_flags = recon_err > re_thr  # PCA-based anomaly indicator\n",
         "\n",
-        "clust = DBSCAN(eps=0.5, min_samples=5).fit(data_std)\n",
-        "db_flags = clust.labels_ == -1\n",
+        "clust = DBSCAN(eps=0.5, min_samples=5).fit(data_std)  # density-based clustering\n",
+        "db_flags = clust.labels_ == -1  # label -1 denotes noise/outliers\n",
         "\n",
-        "votes = z_flags.astype(int) + iqr_f.astype(int) + iso_flags.astype(int) + pca_flags.astype(int) + db_flags.astype(int)\n",
-        "print('PCA outliers:', int(pca_flags.sum()), 'DBSCAN outliers:', int(db_flags.sum()), 'Fusion votes>=3:', int((votes>=3).sum()))\n"
+        "votes = z_flags.astype(int) + iqr_f.astype(int) + iso_flags.astype(int) + pca_flags.astype(int) + db_flags.astype(int)  # 5-way ensemble votes\n",
+        "print('PCA outliers:', int(pca_flags.sum()), 'DBSCAN outliers:', int(db_flags.sum()), 'Fusion votes>=3:', int((votes>=3).sum()))  # summary\n"
       ]
     },
     {
