Docs: inline code comments for cells 5-8 in advanced notebook

--- a/data_quality_anomaly_detection_advanced.ipynb
+++ b/data_quality_anomaly_detection_advanced.ipynb
@@ -173,7 +173,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -187,26 +187,26 @@
       ],
       "source": [
         "# CELL 5: Hyperparameter optimization (IF & RF)\n",
-        "X = pd.DataFrame(data_std, columns=numeric_cols)\n",
-        "y = (votes>=3).astype(int)\n",
-        "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=42)\n",
+        "X = pd.DataFrame(data_std, columns=numeric_cols)  # feature matrix from standardized data\n",
+        "y = (votes>=3).astype(int)  # ensemble-based label: 1 if >=3 detectors agree\n",
+        "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=42)  # hold-out split\n",
         "\n",
-        "iso_grid = GridSearchCV(IsolationForest(random_state=42),\n",
-        "                        {'n_estimators':[50,100,200], 'contamination':[0.05,0.1,0.15], 'max_samples':['auto',100,200]},\n",
-        "                        cv=3, scoring='roc_auc', n_jobs=-1)\n",
-        "iso_grid.fit(X_train, y_train)\n",
-        "print('Best IF:', iso_grid.best_params_)\n",
+        "iso_grid = GridSearchCV(IsolationForest(random_state=42),  # grid search for Isolation Forest\n",
+        "                        {'n_estimators':[50,100,200], 'contamination':[0.05,0.1,0.15], 'max_samples':['auto',100,200]},  # parameter grid\n",
+        "                        cv=3, scoring='roc_auc', n_jobs=-1)  # CV folds, metric, parallel jobs\n",
+        "iso_grid.fit(X_train, y_train)  # run search on train set\n",
+        "print('Best IF:', iso_grid.best_params_)  # show best parameters\n",
         "\n",
-        "rf_grid = GridSearchCV(RandomForestClassifier(random_state=42),\n",
-        "                       {'n_estimators':[100,200], 'max_depth':[5,10,None], 'min_samples_split':[2,5,10]},\n",
-        "                       cv=3, scoring='f1', n_jobs=-1)\n",
-        "rf_grid.fit(X_train, y_train)\n",
-        "print('Best RF:', rf_grid.best_params_)\n"
+        "rf_grid = GridSearchCV(RandomForestClassifier(random_state=42),  # grid search for Random Forest classifier\n",
+        "                       {'n_estimators':[100,200], 'max_depth':[5,10,None], 'min_samples_split':[2,5,10]},  # parameter grid\n",
+        "                       cv=3, scoring='f1', n_jobs=-1)  # CV folds, metric, parallel jobs\n",
+        "rf_grid.fit(X_train, y_train)  # run search on train set\n",
+        "print('Best RF:', rf_grid.best_params_)  # show best parameters\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -230,29 +230,29 @@
       ],
       "source": [
         "# CELL 6: Evaluation & curves\n",
-        "best_iso = iso_grid.best_estimator_\n",
-        "best_rf = rf_grid.best_estimator_\n",
+        "best_iso = iso_grid.best_estimator_  # best Isolation Forest from grid\n",
+        "best_rf = rf_grid.best_estimator_  # best Random Forest from grid\n",
         "\n",
-        "iso_scores = best_iso.decision_function(X_test)\n",
-        "rf_prob = best_rf.predict_proba(X_test)[:,1]\n",
-        "rf_pred = best_rf.predict(X_test)\n",
+        "iso_scores = best_iso.decision_function(X_test)  # anomaly scores (higher=more normal)\n",
+        "rf_prob = best_rf.predict_proba(X_test)[:,1]  # class-1 probability\n",
+        "rf_pred = best_rf.predict(X_test)  # hard labels\n",
         "\n",
         "from sklearn.metrics import precision_score, recall_score, f1_score, accuracy_score\n",
-        "iso_pred_bin = (best_iso.predict(X_test)==-1).astype(int)\n",
-        "print('IF -> acc:', accuracy_score(y_test, iso_pred_bin), 'prec:', precision_score(y_test, iso_pred_bin), 'rec:', recall_score(y_test, iso_pred_bin), 'f1:', f1_score(y_test, iso_pred_bin))\n",
-        "print('RF -> acc:', accuracy_score(y_test, rf_pred), 'prec:', precision_score(y_test, rf_pred), 'rec:', recall_score(y_test, rf_pred), 'f1:', f1_score(y_test, rf_pred))\n",
+        "iso_pred_bin = (best_iso.predict(X_test)==-1).astype(int)  # convert IF output to 0/1\n",
+        "print('IF -> acc:', accuracy_score(y_test, iso_pred_bin), 'prec:', precision_score(y_test, iso_pred_bin), 'rec:', recall_score(y_test, iso_pred_bin), 'f1:', f1_score(y_test, iso_pred_bin))  # IF metrics\n",
+        "print('RF -> acc:', accuracy_score(y_test, rf_pred), 'prec:', precision_score(y_test, rf_pred), 'rec:', recall_score(y_test, rf_pred), 'f1:', f1_score(y_test, rf_pred))  # RF metrics\n",
         "\n",
-        "fpr_iso, tpr_iso, _ = roc_curve(y_test, iso_scores)\n",
-        "precision_iso, recall_iso, _ = precision_recall_curve(y_test, iso_scores)\n",
+        "fpr_iso, tpr_iso, _ = roc_curve(y_test, iso_scores)  # ROC for IF\n",
+        "precision_iso, recall_iso, _ = precision_recall_curve(y_test, iso_scores)  # PR for IF\n",
         "roc_auc_iso = auc(fpr_iso, tpr_iso)\n",
         "ap_iso = average_precision_score(y_test, iso_scores)\n",
         "\n",
-        "fpr_rf, tpr_rf, _ = roc_curve(y_test, rf_prob)\n",
-        "precision_rf, recall_rf, _ = precision_recall_curve(y_test, rf_prob)\n",
+        "fpr_rf, tpr_rf, _ = roc_curve(y_test, rf_prob)  # ROC for RF\n",
+        "precision_rf, recall_rf, _ = precision_recall_curve(y_test, rf_prob)  # PR for RF\n",
         "roc_auc_rf = auc(fpr_rf, tpr_rf)\n",
         "ap_rf = average_precision_score(y_test, rf_prob)\n",
         "\n",
-        "fig, axes = plt.subplots(1,2, figsize=(12,5))\n",
+        "fig, axes = plt.subplots(1,2, figsize=(12,5))  # plot ROC & PR side by side\n",
         "axes[0].plot(fpr_iso, tpr_iso, label=f'IF AUC={roc_auc_iso:.3f}')\n",
         "axes[0].plot(fpr_rf, tpr_rf, label=f'RF AUC={roc_auc_rf:.3f}')\n",
         "axes[0].plot([0,1],[0,1],'k--', alpha=0.4); axes[0].legend(); axes[0].set_title('ROC')\n",
@@ -264,7 +264,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -290,18 +290,18 @@
       ],
       "source": [
         "# CELL 7: Feature importance & PDP (RF)\n",
-        "result = permutation_importance(best_rf, X_test, y_test, n_repeats=20, random_state=42)\n",
-        "pi = pd.Series(result.importances_mean, index=X_test.columns).sort_values(ascending=False)\n",
-        "ax = pi.plot(kind='bar', color='slateblue', figsize=(6,4), title='Permutation Importance'); ax.set_ylabel('Mean Δscore'); plt.tight_layout(); plt.show()\n",
-        "fig, ax = plt.subplots(1,2, figsize=(10,4))\n",
-        "PartialDependenceDisplay.from_estimator(best_rf, X_test, [0], ax=ax[0]); ax[0].set_title(f'PDP: {X_test.columns[0]}')\n",
-        "PartialDependenceDisplay.from_estimator(best_rf, X_test, [1], ax=ax[1]); ax[1].set_title(f'PDP: {X_test.columns[1]}')\n",
+        "result = permutation_importance(best_rf, X_test, y_test, n_repeats=20, random_state=42)  # model-agnostic importance\n",
+        "pi = pd.Series(result.importances_mean, index=X_test.columns).sort_values(ascending=False)  # mean delta score per feature\n",
+        "ax = pi.plot(kind='bar', color='slateblue', figsize=(6,4), title='Permutation Importance'); ax.set_ylabel('Mean Δscore'); plt.tight_layout(); plt.show()  # barplot\n",
+        "fig, ax = plt.subplots(1,2, figsize=(10,4))  # partial dependence for each feature\n",
+        "PartialDependenceDisplay.from_estimator(best_rf, X_test, [0], ax=ax[0]); ax[0].set_title(f'PDP: {X_test.columns[0]}')  # feature 0 PDP\n",
+        "PartialDependenceDisplay.from_estimator(best_rf, X_test, [1], ax=ax[1]); ax[1].set_title(f'PDP: {X_test.columns[1]}')  # feature 1 PDP\n",
         "plt.tight_layout(); plt.show()\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -317,15 +317,15 @@
       ],
       "source": [
         "# CELL 8: Visual dashboards (histograms, correlations, geo)\n",
-        "fig, axes = plt.subplots(2,3, figsize=(16,10))\n",
-        "axes[0,0].hist(data['trip_duration_min'].dropna(), bins=30, color='skyblue', edgecolor='black'); axes[0,0].set_title('Trip Duration')\n",
-        "axes[0,1].hist(data['speed_kmh'].dropna(), bins=30, color='lightgreen', edgecolor='black'); axes[0,1].set_title('Speed')\n",
-        "axes[0,2].scatter(data['longitude'], data['latitude'], c=(votes>=3).astype(int), cmap='coolwarm', alpha=0.7); axes[0,2].set_title('Geo map (votes>=3 ensemble)')\n",
-        "corr = data[['trip_duration_min','speed_kmh','latitude','longitude']].corr()\n",
-        "im = axes[1,0].imshow(corr, cmap='coolwarm'); axes[1,0].set_title('Correlation'); plt.colorbar(im, ax=axes[1,0])\n",
-        "axes[1,1].bar(['Z','IQR','IF','PCA','DBSCAN'], [z_flags.sum(), iqr_f.sum(), iso_flags.sum(), int(pca_flags.sum()), int(db_flags.sum())], color=['r','orange','purple','teal','navy'])\n",
+        "fig, axes = plt.subplots(2,3, figsize=(16,10))  # multi-panel figure\n",
+        "axes[0,0].hist(data['trip_duration_min'].dropna(), bins=30, color='skyblue', edgecolor='black'); axes[0,0].set_title('Trip Duration')  # duration distribution\n",
+        "axes[0,1].hist(data['speed_kmh'].dropna(), bins=30, color='lightgreen', edgecolor='black'); axes[0,1].set_title('Speed')  # speed distribution\n",
+        "axes[0,2].scatter(data['longitude'], data['latitude'], c=(votes>=3).astype(int), cmap='coolwarm', alpha=0.7); axes[0,2].set_title('Geo map (votes>=3 ensemble)')  # map with ensemble anomalies\n",
+        "corr = data[['trip_duration_min','speed_kmh','latitude','longitude']].corr()  # correlation matrix\n",
+        "im = axes[1,0].imshow(corr, cmap='coolwarm'); axes[1,0].set_title('Correlation'); plt.colorbar(im, ax=axes[1,0])  # heatmap + colorbar\n",
+        "axes[1,1].bar(['Z','IQR','IF','PCA','DBSCAN'], [z_flags.sum(), iqr_f.sum(), iso_flags.sum(), int(pca_flags.sum()), int(db_flags.sum())], color=['r','orange','purple','teal','navy'])  # method counts\n",
         "axes[1,1].set_title('Anomaly counts')\n",
-        "axes[1,2].hist(votes, bins=[-0.5,0.5,1.5,2.5,3.5,4.5,5.5], rwidth=0.9, color='orchid'); axes[1,2].set_xticks([0,1,2,3,4,5]); axes[1,2].set_title('Votes (0-5)')\n",
+        "axes[1,2].hist(votes, bins=[-0.5,0.5,1.5,2.5,3.5,4.5,5.5], rwidth=0.9, color='orchid'); axes[1,2].set_xticks([0,1,2,3,4,5]); axes[1,2].set_title('Votes (0-5)')  # vote histogram\n",
         "plt.tight_layout(); plt.show()\n"
       ]
     },
